--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
+    "express-session": "^1.15.6",
     "https": "^1.0.0",
     "mongoose": "^5.3.4",
     "nodemon": "^1.18.4",
