--- a/frontend/envirevent/package.json
+++ b/frontend/envirevent/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "ng-sidebar": "^8.0.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
