--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sort-json-array": "^0.1.7"
   }
 }
