--- a/frontend/envirevent/package.json
+++ b/frontend/envirevent/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-progress-bar": "^1.0.8",
     "angular2-qrscanner": "^1.0.4",
     "angularx-qrcode": "^1.2.4",
     "bootstrap": "^4.1.3",
