--- a/frontend/envirevent/package.json
+++ b/frontend/envirevent/package.json
@@ -21,14 +21,18 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "angular-progress-bar": "^1.0.8",
+    "@zxing/ngx-scanner": "^1.2.1",
     "angular-font-awesome": "^3.1.2",
+    "angular-progress-bar": "^1.0.8",
     "angular2-qrscanner": "^1.0.4",
     "angularx-qrcode": "^1.2.4",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ng-sidebar": "^8.0.0",
+    "ngx-barcode": "^0.2.4",
+    "ngx-barcode-scanner": "0.0.5",
+    "quagga": "^0.12.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
