--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0",
+    "shortid": "^2.2.13",
     "sort-json-array": "^0.1.7",
     "uniqid": "^5.0.3"
   }
